--- a/package.json
+++ b/package.json
@@ -9,28 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@arcjet/inspect": "^1.0.0-beta.8",
-    "@arcjet/next": "^1.0.0-beta.8",
-    "@clerk/nextjs": "^6.20.1",
+    "@arcjet/next": "^1.0.0-alpha.28",
+    "@arcjet/redact": "^1.0.0-alpha.28",
+    "@clerk/nextjs": "^6.3.1",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.9.0",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.1",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-react": "^8.6.0",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.2",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
+    "lucide-react": "^0.456.0",
+    "next": "15.0.3",
+    "next-themes": "^0.4.3",
+    "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.58.1",
+    "react-quill-new": "^3.3.3",
+    "react-spinners": "^0.14.1",
+    "recharts": "^2.13.3",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
