--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.9",
+    "@arcjet/next": "^1.0.0-beta.9",
     "@clerk/nextjs": "^6.27.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
